Complete s3m_meta models and example instances.

--- a/RM/3_1_0/notebooks/00. Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/00. Getting Started.ipynb
@@ -5,8 +5,10 @@
    "metadata": {},
    "source": [
     "<div class=\"logo-container\">\n",
-    "  <div class=\"logo\"><img src=\"images/DataInsights.png\" height=\"100\" width=\"120\"/></div>\n",
-    "  <div class=\"logo\"><img src=\"images/S3M.png\" height=\"70\" width=\"70\"/></div>\n",
+    "  <span class=\"logo\"><img src=\"images/DataInsights.png\" height=\"100\" width=\"120\"/></span>\n",
+    "</div>\n",
+    "<div class=\"logo-container\">\n",
+    "  <span class=\"logo\"><img src=\"images/S3M.png\" height=\"70\" width=\"70\"/></span>\n",
     "</div>"
    ]
   },
@@ -179,40 +181,13 @@
     "\n",
     "1.  [DMType](DMType%20Examples.ipynb)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**STOP:** You've reached the end of the chapter. Ignore the code below, it's just here to make the page pretty:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.core.display import HTML\n",
-    "def css_styling():\n",
-    "    styles = open(\"styles/custom.css\", \"r\").read()\n",
-    "    return HTML(styles)\n",
-    "css_styling()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:S3Model]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-S3Model-py"
   },
   "language_info": {
    "codemirror_mode": {
