--- a/RM/3_1_0/notebooks/Audit Examples.ipynb
+++ b/RM/3_1_0/notebooks/Audit Examples.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -34,6 +34,7 @@
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
+    "from s3m_utils import xsdstub, xmlstub, jsonstub\n",
     "from s3m_xdt import XdStringType\n",
     "from s3m_struct import ClusterType, XdAdapterType\n",
     "from s3m_meta import AuditType, PartyType"
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -88,166 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AuditType : Test Audit, ID: cjnyrmp39000734bikaqtohel \n",
-      "\n",
-      "\n",
-      "\n",
-      "  <xs:complexType name='mc-cjnyrmp39000734bikaqtohel' xml:lang=''>\n",
-      "    <xs:annotation>\n",
-      "    <xs:documentation>\n",
-      "      An example Audit component.\n",
-      "    </xs:documentation>\n",
-      "    <xs:appinfo>\n",
-      "    <rdfs:Class rdf:about='mc-cjnyrmp39000734bikaqtohel'>\n",
-      "    <rdfs:subClassOf rdf:resource='https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd##AuditType'/>\n",
-      "    <rdfs:subClassOf rdf:resource='https://www.s3model.com/ns/s3m/s3model/RMC'/>\n",
-      "    <rdfs:label>Test Audit</rdfs:label>\n",
-      "    </rdfs:Class>\n",
-      "    </xs:appinfo>\n",
-      "    </xs:annotation>\n",
-      "    <xs:complexContent>\n",
-      "      <xs:restriction base='s3m:AuditType'>\n",
-      "        <xs:sequence>\n",
-      "          <xs:element maxOccurs='1' minOccurs='1' name='label' type='xs:string' fixed=\"Test Audit\"/>\n",
-      "          <xs:element maxOccurs='1' minOccurs='1' name='system-id' type='s3m:mc-cjnyrmp39000834bilnsteb0t'/>\n",
-      "          <xs:element maxOccurs='1' minOccurs='0' name='system-user' type='s3m:mc-cjnyrmp39000a34biepdl4bo3'/>\n",
-      "          <xs:element maxOccurs='1' minOccurs='0' name='location' type='s3m:mc-cjnyrmp3a000d34bifvjd6xd1'/>\n",
-      "          <xs:element maxOccurs='1' minOccurs='1' name='timestamp' type='xs:dateTime'/>\n",
-      "          </xs:sequence>\n",
-      "        </xs:restriction>\n",
-      "      </xs:complexContent>\n",
-      "    </xs:complexType>\n",
-      "\n",
-      "  <xs:element name=\"ms-cjnyrmp39000834bilnsteb0t\" substitutionGroup=\"s3m:XdString\" type=\"s3m:mc-cjnyrmp39000834bilnsteb0t\"/>\n",
-      "  <xs:complexType name=\"mc-cjnyrmp39000834bilnsteb0t\">\n",
-      "    <xs:annotation>\n",
-      "      <xs:documentation>\n",
-      "        An example system id.\n",
-      "      </xs:documentation>\n",
-      "      <xs:appinfo>\n",
-      "        <rdfs:Class rdf:about=\"mc-cjnyrmp39000834bilnsteb0t\">\n",
-      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdStringType\"/>\n",
-      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
-      "          <rdfs:isDefinedBy rdf:resource=\"https%3A//s3model.com/examples/audit/systemid\"/>\n",
-      "        </rdfs:Class>\n",
-      "      </xs:appinfo>\n",
-      "    </xs:annotation>\n",
-      "    <xs:complexContent>\n",
-      "      <xs:restriction base=\"s3m:XdStringType\">\n",
-      "        <xs:sequence>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"label\" type=\"xs:string\" fixed=\"Test Audit System ID\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"act\" type=\"xs:string\"/>\n",
-      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ExceptionalValue\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vtb\" type=\"xs:dateTime\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vte\" type=\"xs:dateTime\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"tr\" type=\"xs:dateTime\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"modified\" type=\"xs:dateTime\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"latitude\" type=\"s3m:lattype\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"longitude\" type=\"s3m:lontype\"/>\n",
-      "          <xs:element maxOccurs='1' minOccurs='0' name='xdstring-value'>\n",
-      "              <xs:simpleType>\n",
-      "                <xs:restriction base='xs:string'>\n",
-      "                  <xs:pattern value='[0-9]{2}-[0-9]{1}-[0-9]{3}'/>\n",
-      "                </xs:restriction>\n",
-      "              </xs:simpleType>\n",
-      "            </xs:element>\n",
-      "        </xs:sequence>\n",
-      "      </xs:restriction>\n",
-      "    </xs:complexContent>\n",
-      "  </xs:complexType>\n",
-      "\n",
-      "\n",
-      "  <xs:complexType name='mc-cjnyrmp39000a34biepdl4bo3'> \n",
-      "    <xs:annotation>\n",
-      "    <xs:documentation>\n",
-      "      An example Audit system user.\n",
-      "    </xs:documentation>\n",
-      "    <xs:appinfo>\n",
-      "    <rdfs:Class rdf:about='mc-cjnyrmp39000a34biepdl4bo3'>\n",
-      "    <rdfs:subClassOf rdf:resource='https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#PartyType'/>\n",
-      "    <rdfs:subClassOf rdf:resource='https://www.s3model.com/ns/s3m/s3model/RMC'/>\n",
-      "    <rdfs:label>Test Audit System User</rdfs:label>\n",
-      "    </rdfs:Class>\n",
-      "    </xs:appinfo>\n",
-      "    </xs:annotation>\n",
-      "    <xs:complexContent>\n",
-      "      <xs:restriction base='s3m:PartyType'>\n",
-      "        <xs:sequence>\n",
-      "          <xs:element maxOccurs='1' minOccurs='1' name='label' type='xs:string' fixed=\"Test Audit System User\"/>\n",
-      "          <xs:element maxOccurs='1' minOccurs='0' name='party-name' type='xs:string'/>\n",
-      "          </xs:sequence>\n",
-      "        </xs:restriction>\n",
-      "      </xs:complexContent>\n",
-      "    </xs:complexType>\n",
-      "\n",
-      "  \n",
-      "<xs:element name=\"ms-cjnyrmp3a000d34bifvjd6xd1\" substitutionGroup=\"s3m:Item\" type=\"s3m:mc-cjnyrmp3a000d34bifvjd6xd1\"/>\n",
-      "  <xs:complexType name=\"mc-cjnyrmp3a000d34bifvjd6xd1\">\n",
-      "    <xs:annotation>\n",
-      "      <xs:documentation>\n",
-      "        An example Audit location.\n",
-      "      </xs:documentation>\n",
-      "      <xs:appinfo>\n",
-      "        <rdfs:Class rdf:about=\"mc-cjnyrmp3a000d34bifvjd6xd1\">\n",
-      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#ClusterType\"/>\n",
-      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
-      "          <rdfs:isDefinedBy rdf:resource=\"https%3A//s3model.com/examples/audit/location\"/>\n",
-      "        </rdfs:Class>\n",
-      "      </xs:appinfo>\n",
-      "    </xs:annotation>\n",
-      "    <xs:complexContent>\n",
-      "      <xs:restriction base=\"s3m:ClusterType\">\n",
-      "        <xs:sequence>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"label\" type=\"xs:string\" fixed=\"Test Audit Location\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" ref=\"s3m:ms-cjnyrmp39000c34bivbgv99hi\"/>\n",
-      "        </xs:sequence>\n",
-      "      </xs:restriction>\n",
-      "    </xs:complexContent>\n",
-      "  </xs:complexType>\n",
-      "\n",
-      "  \n",
-      "<xs:element name=\"ms-cjnyrmp39000c34bivbgv99hi\" substitutionGroup=\"s3m:Items\" type=\"s3m:mc-cjnyrmp39000c34bivbgv99hi\"/>\n",
-      "  <xs:complexType name=\"mc-cjnyrmp39000c34bivbgv99hi\">\n",
-      "    <xs:complexContent>\n",
-      "      <xs:restriction base=\"s3m:XdAdapterType\">\n",
-      "        <xs:sequence>\n",
-      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ms-cjnyrmp39000b34bic4cminnm\"/>\n",
-      "        </xs:sequence>\n",
-      "      </xs:restriction>\n",
-      "    </xs:complexContent>\n",
-      "  </xs:complexType>\n",
-      "\n",
-      "  <xs:element name=\"ms-cjnyrmp39000b34bic4cminnm\" substitutionGroup=\"s3m:XdAdapter-value\" type=\"s3m:mc-cjnyrmp39000b34bic4cminnm\"/>\n",
-      "  <xs:complexType name=\"mc-cjnyrmp39000b34bic4cminnm\">\n",
-      "    <xs:annotation>\n",
-      "      <xs:documentation>\n",
-      "        A location that requires lat/lon and a descriptive name for a value.\n",
-      "      </xs:documentation>\n",
-      "      <xs:appinfo>\n",
-      "        <rdfs:Class rdf:about=\"mc-cjnyrmp39000b34bic4cminnm\">\n",
-      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdStringType\"/>\n",
-      "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
-      "          <rdfs:isDefinedBy rdf:resource=\"https%3A//s3model.com/location\"/>\n",
-      "        </rdfs:Class>\n",
-      "      </xs:appinfo>\n",
-      "    </xs:annotation>\n",
-      "    <xs:complexContent>\n",
-      "      <xs:restriction base=\"s3m:XdStringType\">\n",
-      "        <xs:sequence>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"label\" type=\"xs:string\" fixed=\"GPS Coordinates\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"act\" type=\"xs:string\"/>\n",
-      "          <xs:element maxOccurs=\"unbounded\" minOccurs=\"0\" ref=\"s3m:ExceptionalValue\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vtb\" type=\"xs:dateTime\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"vte\" type=\"xs:dateTime\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"tr\" type=\"xs:dateTime\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"0\" name=\"modified\" type=\"xs:dateTime\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"latitude\" type=\"s3m:lattype\"/>\n",
-      "          <xs:element maxOccurs=\"1\" minOccurs=\"1\" name=\"longitude\" type=\"s3m:lontype\"/>\n",
-      "          <xs:element maxOccurs='1' minOccurs='0' name='xdstring-value' type='xs:string'/>\n",
-      "        </xs:sequence>\n",
-      "      </xs:restriction>\n",
-      "    </xs:complexContent>\n",
-      "  </xs:complexType>\n",
+      "AuditType : Test Audit, ID: cjo3082sm0000flbi9jox0e12 \n",
       "\n"
      ]
     }
@@ -286,8 +128,29 @@
     "aud.location = loc\n",
     "\n",
     "print(aud,'\\n')\n",
-    "aud.published = True\n",
-    "print(aud.getModel())"
+    "aud.published = True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model for  AuditType : Test Audit, ID: cjo3082sm0000flbi9jox0e12  to stub.xsd\n",
+      "Writing data instance for  AuditType : Test Audit, ID: cjo3082sm0000flbi9jox0e12  to stub.xml\n",
+      "Writing JSON data instance for  AuditType : Test Audit, ID: cjo3082sm0000flbi9jox0e12  to stub.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create stubs\n",
+    "xsdstub(aud)\n",
+    "xmlstub(aud, True)\n",
+    "jsonstub(aud, True)"
    ]
   }
  ],
