--- a/RM/3_1_0/notebooks/DMType Examples.ipynb
+++ b/RM/3_1_0/notebooks/DMType Examples.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "help(DMType)"
+    "# help(DMType)"
    ]
   },
   {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,11 +250,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creator  -  Unknown\n",
+      "contribs  -  []\n",
+      "subject  -  S3M Data Model Example\n",
+      "rights  -  Creative Commons\n",
+      "relation  -  None\n",
+      "coverage  -  Global\n",
+      "description  -  Needs a description\n",
+      "publisher  -  Data Insights, Inc.\n",
+      "language  -  en-US\n"
+     ]
+    }
+   ],
    "source": [
     "for (m, i) in DM.metadata.items():\n",
     "    print(m, ' - ', i)"
@@ -269,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -315,7 +331,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote ./dmlib/dm-cjnncpj4e000l488pcicv3hv7.xsd\n"
+      "Wrote ./dmlib/dm-cjo31ckq5000l62bik8ko0lo4.xsd\n"
      ]
     }
    ],
