Complete model export code.

--- a/RM/3_1_0/notebooks/00. Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/00. Getting Started.ipynb
@@ -185,9 +185,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:S3Model]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-S3Model-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
