--- a/RM/3_1_0/notebooks/Advanced DMType Examples.ipynb
+++ b/RM/3_1_0/notebooks/Advanced DMType Examples.ipynb
@@ -239,8 +239,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You have seen previuosly how to add metadata to the components through applying RDF semantics.\n",
-    "Here you will add metadata about the model itself. This is also converted to RDF using the scripts provided with S3Model.\n",
+    "You have seen previuosly how to add *metadata for the components* through applying RDF semantics.\n",
+    "Here you will add *metadata about the model* itself. This is also converted to RDF using the scripts provided with S3Model.\n",
     "\n",
     "We use standard Dublin Core Metadata elements http://dublincore.org/documents/1999/07/02/dces/\n",
     "Note that elements; *title, type, date, format & identifier* are used but are not editable by the modeler.\n",
@@ -259,21 +259,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "creator  -  Unknown\n",
-      "contribs  -  []\n",
-      "subject  -  S3M Data Model Example\n",
-      "rights  -  Creative Commons\n",
-      "relation  -  None\n",
-      "coverage  -  Global\n",
-      "description  -  Needs a description\n",
-      "publisher  -  Data Insights, Inc.\n",
-      "language  -  en-US\n"
+      "    creator: 'Unknown'\n",
+      "    contribs: []\n",
+      "    subject: 'S3M Data Model Example'\n",
+      "    rights: 'Creative Commons'\n",
+      "    relation: 'None'\n",
+      "    coverage: 'Global'\n",
+      "    description: 'Needs a description.'\n",
+      "    publisher: 'Data Insights, Inc.'\n",
+      "    language: 'en-US'\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for (m, i) in DM.metadata.items():\n",
-    "    print(m, ' - ', i)"
+    "print(DM.showMetadata())"
    ]
   },
   {
@@ -286,38 +286,40 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "creator  -  Unknown\n",
-      "contribs  -  ['Someone', 'Noone']\n",
-      "subject  -  S3M Data Model Example\n",
-      "rights  -  Creative Commons\n",
-      "relation  -  None\n",
-      "coverage  -  Global\n",
-      "description  -  Needs a description\n",
-      "publisher  -  Data Insights, Inc.\n",
-      "language  -  en-US\n"
+      "    creator: 'Unknown'\n",
+      "    contribs: ['Someone', 'Noone']\n",
+      "    subject: 'S3M Data Model Example'\n",
+      "    rights: 'Creative Commons'\n",
+      "    relation: 'None'\n",
+      "    coverage: 'Global'\n",
+      "    description: 'Needs a description'\n",
+      "    publisher: 'Data Insights, Inc.'\n",
+      "    language: 'en-US'\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "DM.creator = 'Unknown'\n",
-    "DM.contrib = 'Someone'\n",
-    "DM.contrib = 'Noone'\n",
-    "DM.subject = 'S3M Data Model Example'\n",
-    "DM.rights = 'Creative Commons'\n",
-    "DM.relation = 'None'\n",
-    "DM.coverage = 'Global'\n",
-    "DM.description = 'Needs a description'\n",
-    "DM.publisher = 'Data Insights, Inc.'\n",
-    "DM.language = 'en-US'\n",
+    "DM.md_creator = 'Unknown'\n",
+    "DM.md_contrib = 'Someone'\n",
+    "DM.md_contrib = 'Noone'\n",
+    "DM.md_subject = 'S3M Data Model Example'\n",
+    "DM.md_rights = 'Creative Commons'\n",
+    "DM.md_relation = 'None'\n",
+    "DM.md_coverage = 'Global'\n",
+    "DM.md_description = 'Needs a description'\n",
+    "DM.md_publisher = 'Data Insights, Inc.'\n",
+    "DM.md_language = 'en-US'\n",
     "\n",
-    "for (m, i) in DM.metadata.items():\n",
-    "    print(m, ' - ', i)"
+    "print(DM.showMetadata())"
    ]
   },
   {
@@ -331,7 +333,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote ./dmlib/dm-cjo31ckq5000l62bik8ko0lo4.xsd\n"
+      "Wrote ./dmlib/dm-cjoa62rj1000lhhbi95pq7xzl.xsd\n"
      ]
     }
    ],
@@ -351,9 +353,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:S3Model]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-S3Model-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
